--- a/fake_news_detection.ipynb
+++ b/fake_news_detection.ipynb
@@ -16,11 +16,7 @@
     "from sklearn.metrics import accuracy_score, confusion_matrix\n",
     "\n",
     "import os\n",
-    "import zipfile\n",
-    "\n",
-    "# directories\n",
-    "RAW_DATA = './data/raw/news.zip' # Immutable\n",
-    "PRO_DATA_DIR = './data/processed/'"
+    "import zipfile"
    ]
   },
   {
@@ -137,11 +133,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    FAKE\n",
+       "1    FAKE\n",
+       "2    REAL\n",
+       "3    FAKE\n",
+       "4    REAL\n",
+       "Name: label, dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the labels\n",
+    "labels=df.label\n",
+    "labels.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 1"
+    "# Split the dataset\n",
+    "x_train,x_test,y_train,y_test=train_test_split(df['text'], labels, test_size=0.2, random_state=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize a TfidfVectorizer\n",
+    "tfidf_vectorizer=TfidfVectorizer(stop_words='english', max_df=0.7)\n",
+    "# Fit and transform train set, transform test set\n",
+    "tfidf_train=tfidf_vectorizer.fit_transform(x_train) \n",
+    "tfidf_test=tfidf_vectorizer.transform(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 93.84%\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Initialize a PassiveAggressiveClassifier\n",
+    "pac=PassiveAggressiveClassifier(max_iter=50)\n",
+    "pac.fit(tfidf_train,y_train)\n",
+    "#Predict on the test set and calculate accuracy\n",
+    "y_pred=pac.predict(tfidf_test)\n",
+    "score=accuracy_score(y_test,y_pred)\n",
+    "print(f'Accuracy: {round(score*100,2)}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[603,  35],\n",
+       "       [ 43, 586]], dtype=int64)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Build confusion matrix\n",
+    "confusion_matrix(y_test,y_pred, labels=['FAKE','REAL'])"
    ]
   }
  ],
