--- a/fake_news_detection.ipynb
+++ b/fake_news_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,17 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with zipfile.ZipFile(RAW_DATA, 'r') as zip_ref:\n",
-    "    zip_ref.extractall(PRO_DATA_DIR)"
+    "with zipfile.ZipFile('./news.zip', 'r') as zip_ref:\n",
+    "    zip_ref.extractall('./')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -117,14 +117,14 @@
        "4  It's primary day in New York and front-runners...  REAL  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Read the data\n",
-    "df = pd.read_csv(PRO_DATA_DIR + '/news.csv')\n",
+    "df = pd.read_csv('./news.csv')\n",
     "\n",
     "#Get shape and head\n",
     "df.shape\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "Name: label, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
