--- a/fake_news_detection.ipynb
+++ b/fake_news_detection.ipynb
@@ -14,8 +14,6 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.linear_model import PassiveAggressiveClassifier\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix\n",
-    "\n",
-    "import os\n",
     "import zipfile"
    ]
   },
@@ -166,6 +164,13 @@
    "source": [
     "# Split the dataset\n",
     "x_train,x_test,y_train,y_test=train_test_split(df['text'], labels, test_size=0.2, random_state=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s initialize a TfidfVefctorizer with stop words from the English language and a maximum document frequency of 0.7 (terms with a higher document frequency will be discarded). Stop words are the most common words in a language that are to be filtered out before processing the natural language data. And a TfidfVectorizer turns a collection of raw documents into a matrix of TF-IDF features. "
    ]
   },
   {
