--- a/fake-news-detection-model-comparison.ipynb
+++ b/fake-news-detection-model-comparison.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "85bc1399",
+   "metadata": {},
+   "source": [
+    "### SETUP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d170a991",
    "metadata": {
     "execution": {
@@ -62,6 +70,14 @@
     "from sklearn.metrics import classification_report\n",
     "from zipfile import ZipFile\n",
     "import matplotlib.pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef50edb6",
+   "metadata": {},
+   "source": [
+    "**NLTK (Natural Language Toolkit)** is a leading platform for building Python programs to work with human language data. It provides easy-to-use interfaces to over 50 corpora and lexical resources such as WordNet, along with a suite of text processing libraries for classification, tokenization, stemming, tagging, parsing, and semantic reasoning, wrappers for industrial-strength NLP libraries, and an active discussion forum."
    ]
   },
   {
@@ -147,6 +163,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "29323b61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# download data\n",
+    "for zip in ['test.csv.zip','train.csv.zip']:\n",
+    "    with ZipFile(zip, 'r') as zipObj:\n",
+    "    # Extract all the contents of zip file in current directory\n",
+    "        zipObj.extractall()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "36fce73a",
    "metadata": {
@@ -160,20 +190,7 @@
     "tags": []
    },
    "source": [
-    "**PRE PROCESSING OF DATA**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "29323b61",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for zip in ['test.csv.zip','train.csv.zip']:\n",
-    "    with ZipFile(zip, 'r') as zipObj:\n",
-    "    # Extract all the contents of zip file in current directory\n",
-    "        zipObj.extractall()"
+    "### PRE PROCESSING OF DATA"
    ]
   },
   {
@@ -936,6 +953,14 @@
    ],
    "source": [
     "print(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65433515",
+   "metadata": {},
+   "source": [
+    "### MODEL COMPARISON"
    ]
   },
   {
@@ -1876,7 +1901,6 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import classification_report\n",
     "print(classification_report(Y_test, X_test_prediction))"
    ]
   },
@@ -1919,7 +1943,6 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import classification_report\n",
     "print(classification_report(Y1_test,prediction1))"
    ]
   },
@@ -1962,33 +1985,7 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import classification_report\n",
     "print(classification_report(Y2_test,prediction2))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "94b1012d",
-   "metadata": {
-    "papermill": {
-     "duration": 0.060878,
-     "end_time": "2022-02-16T16:42:52.056122",
-     "exception": false,
-     "start_time": "2022-02-16T16:42:51.995244",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**MODEL COMPARISON**\n",
-    "\n",
-    "Hence, in this dataset we can observe that\n",
-    "\n",
-    "* Logistic Regression : Accuracy is 0.98\n",
-    "\n",
-    "* Multinomial Naive Bayes : Accuracy is 0.95\n",
-    "\n",
-    "* Passive Aggressive Classifier : Accuracy is 0.99"
    ]
   }
  ],
