--- a/fake-news-detection-model-comparison.ipynb
+++ b/fake-news-detection-model-comparison.ipynb
@@ -1282,13 +1282,7 @@
     "\n",
     "    plt.tight_layout()\n",
     "    plt.ylabel('True label')\n",
-    "    plt.xlabel('Predicted label')\n",
-    "\n",
-    "\n",
-    "        \n",
-    "\n",
-    "    \n",
-    "    "
+    "    plt.xlabel('Predicted label')"
    ]
   },
   {
